fixed z-index on nav

--- a/_assets/scss/partials/layout/_flexbox-header-nav.scss
+++ b/_assets/scss/partials/layout/_flexbox-header-nav.scss
@@ -25,7 +25,7 @@ $bgcolor2: darken($bgcolor, 5%);
 
 .nav {
   // display: none;
-  // z-index: 2;
+  z-index: 2;
   border-bottom: 4px solid $acolor;
   font-family: 'Oswald',sans-serif;
   position: fixed;
